--- a/Structured Cabling Studio/Views/_ViewImports.cshtml
+++ b/Structured Cabling Studio/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using StructuredCablingStudio.Controllers
+@using StructuredCablingStudio.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer Localizer
