Added authorization system

--- a/Structured Cabling Studio/Views/Account/AuthenticationFailed.cshtml
+++ b/Structured Cabling Studio/Views/Account/AuthenticationFailed.cshtml
@@ -1,4 +1,7 @@
 ﻿@model AuthenticationFailedViewModel
+@{
+	ViewData["Title"] = "Authentication failed";
+}
 
 <h1>
 	@Localizer["Authentication is failed"]
