Styles of the Layout page was edited

--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
-				<div id="siteNavbarDiv" class="navbar-collapse collapse d-lg-inline-flex me-0 me-sm-1 me-md-2 me-lg-3">
+				<div id="siteNavbarDiv" class="navbar-collapse collapse d-lg-inline-flex me-0 me-sm-1 me-md-2 me-lg-3 pt-1 pt-lg-0">
 					<ul class="align-items-center navbar-nav flex-grow-1 flex-row-reverse">
 						<li class="siteNavbarLi nav-item ms-3 ms-lg-2 me-1">
 							<div class="nav-link text-white">
