--- a/Structured Cabling Studio/Views/Shared/_SignInWithGooglePartial.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_SignInWithGooglePartial.cshtml
@@ -5,7 +5,7 @@
 <div class="text-center">
 	@if (User.Identity!.IsAuthenticated)
 	{
-		<div class="loginDisplay nav-link pt-0 pb-1">
+		<div class="loginDisplay nav-link pb-1">
 			<div class="text-white fw-semibold">
 				@Localizer["Hello"]
 			</div>
