The work on the Calculate page markup is ongoing

--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -12,8 +12,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-11 col-sm-8 col-md-6 col-lg-3">
-                <input class="form-control" type="text" id="minPermanentLinkInput" name="minPermanentLink" />
+            <div class="col-5 col-md-4 col-lg-3 col-xxl-2">
+                <input class="form-control border-primary border-opacity-75" type="text" id="minPermanentLinkInput" name="minPermanentLink" />
             </div>
             <div class="col d-flex align-items-end ps-0">
                 <label class="form-label mb-1" for="minPermanentLinkInput">
@@ -32,13 +32,43 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-11 col-sm-8 col-md-6 col-lg-3">
-                <input class="form-control" type="text" id="maxPermanentLinkInput" name="maxPermanentLink" />
+            <div class="col-5 col-md-4 col-lg-3 col-xxl-2">
+                <input class="form-control border-primary border-opacity-75" type="text" id="maxPermanentLinkInput" name="maxPermanentLink" />
             </div>
             <div class="col d-flex align-items-end ps-0">
                 <label class="form-label mb-1" for="maxPermanentLinkInput">
                     @Localizer["m"]
                 </label>
+            </div>
+        </div>
+    </div>
+
+    <div class="mb-3">
+        <div class="row">
+            <div class="col">
+                <label class="form-label" for="workplacesCountInput">
+                    @Localizer["Workplaces count:"]
+                </label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-5 col-md-4 col-lg-3 col-xxl-2">
+                <input class="form-control border-primary border-opacity-75" type="text" id="workplacesCountInput" name="workplacesCount" />
+            </div>
+        </div>
+    </div>
+
+    <div class="mb-3">
+        <div class="row">
+            <div class="col">
+                <label class="form-label" for="portsCountInput">
+                    @Localizer["Ports count per 1 workplace:"]
+                </label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-5 col-md-4 col-lg-3 col-xxl-2">
+                <input class="form-control border-primary border-opacity-75" type="text" id="portsCountInput" name="portsCount" />
             </div>
         </div>
     </div>
