--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -86,23 +86,58 @@
 		</div>
 		<div class="row mt-2">
 			<div class="col-5 col-md-4 col-lg-3 col-xxl-2">
-				<input class="form-control border-primary border-opacity-75" type="text" id="" name="" />
+				<input class="form-control border-primary border-opacity-75" type="text" id="cableHankMeterageInput" name="cableHankMeterage" />
 			</div>
 			<div class="col-auto d-flex align-items-end ps-0 pe-0">
-				<label class="form-label mb-1" for="">
+				<label class="form-label mb-1" for="cableHankMeterageInput">
 					@Localizer["m"]
 				</label>
 			</div>
 			<div class="col-5 col-md-4 col-lg-3 col-xxl-2">
-				<select class="form-select border-primary border-opacity-75">
+@*				<select class="form-select border-primary border-opacity-75">
+					<option selected>@Localizer["Hank length"]</option>
 					<option value="50">50 @Localizer["m"]</option>
 					<option value="100">100 @Localizer["m"]</option>
-					<option selected value="305">305 @Localizer["m"]</option>
+					<option value="305">305 @Localizer["m"]</option>
 					<option value="500">500 @Localizer["m"]</option>
 					<option value="1000">1000 @Localizer["m"]</option>
-				</select>
+				</select>*@
+				<details style="z-index:3000">
+					<div class="form-check">
+						<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+						<label class="form-check-label" for="flexRadioDefault1">
+							Default radio
+						</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+						<label class="form-check-label" for="flexRadioDefault1">
+							Default radio
+						</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+						<label class="form-check-label" for="flexRadioDefault1">
+							Default radio
+						</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+						<label class="form-check-label" for="flexRadioDefault1">
+							Default radio
+						</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+						<label class="form-check-label" for="flexRadioDefault1">
+							Default radio
+						</label>
+					</div>
+				</details>
 			</div>
 		</div>
 	</div>
+
+	<hr class="border border-primary opacity-50" />
 
 </form>
