The work on the Calculate page markup is ongoing

--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -94,50 +94,48 @@
 				</label>
 			</div>
 			<div class="col-5 col-md-4 col-lg-3 col-xxl-2">
-@*				<select class="form-select border-primary border-opacity-75">
-					<option selected>@Localizer["Hank length"]</option>
-					<option value="50">50 @Localizer["m"]</option>
-					<option value="100">100 @Localizer["m"]</option>
-					<option value="305">305 @Localizer["m"]</option>
-					<option value="500">500 @Localizer["m"]</option>
-					<option value="1000">1000 @Localizer["m"]</option>
-				</select>*@
-				<details style="z-index:3000">
-					<div class="form-check">
-						<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-						<label class="form-check-label" for="flexRadioDefault1">
-							Default radio
-						</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-						<label class="form-check-label" for="flexRadioDefault1">
-							Default radio
-						</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-						<label class="form-check-label" for="flexRadioDefault1">
-							Default radio
-						</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-						<label class="form-check-label" for="flexRadioDefault1">
-							Default radio
-						</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-						<label class="form-check-label" for="flexRadioDefault1">
-							Default radio
-						</label>
+				<details class="form-control border-primary border-opacity-75 position-relative">
+					<summary>
+						@*@Localizer["The standard values of a cable hank length"]*@
+						m
+					</summary>
+					<div class="form-control border-primary border-opacity-75 position-absolute">
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+							<label class="form-check-label" for="flexRadioDefault1">
+								50 @Localizer["m"]
+							</label>
+						</div>
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+							<label class="form-check-label" for="flexRadioDefault1">
+								100 @Localizer["m"]
+							</label>
+						</div>
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+							<label class="form-check-label" for="flexRadioDefault1">
+								305 @Localizer["m"]
+							</label>
+						</div>
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+							<label class="form-check-label" for="flexRadioDefault1">
+								500 @Localizer["m"]
+							</label>
+						</div>
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+							<label class="form-check-label" for="flexRadioDefault1">
+								100 @Localizer["m"]
+							</label>
+						</div>
 					</div>
 				</details>
 			</div>
 		</div>
 	</div>
 
-	<hr class="border border-primary opacity-50" />
+	<hr class="border border-primary opacity-50"/>
 
 </form>
