--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -105,8 +105,49 @@
 
 	<hr class="border border-primary opacity-50" />
 
-	<h5 class="fw-normal">
+	<h5 class="fw-normal mb-3">
 		@Localizer["Advanced calculation parameters"]
 	</h5>
+
+	<div class="mb-3">
+		<div class="row">
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="strictComplianceWithTheStandartCheckBox" name="strictComplianceWithTheStandart">
+					<label class="form-check-label" for="strictComplianceWithTheStandartCheckBox">
+						@Localizer["Strict compliance with the standart"]
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="row ms-1 mt-1">
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="arbitaryPortsCountPerWorkplaceCheckBox" name="arbitaryPortsCountPerWorkplace">
+					<label class="form-check-label" for="arbitaryPortsCountPerWorkplaceCheckBox">
+						@Localizer["Arbitary ports count per workplace"]
+					</label>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="mb-3">
+		<div class="row">
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="technologicalReserveCoefficientAvailabilityCheckBox" name="technologicalReserveCoefficientAvailability">
+					<label class="form-check-label" for="technologicalReserveCoefficientAvailabilityCheckBox">
+						@Localizer["Availability of technological reserve coefficient:"]
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="row ms-1 mt-2">
+			<div class="col-5 col-md-4 col-lg-3 col-xxl-2">
+				<input class="form-control border-primary border-opacity-75" type="text" id="" name="" />
+			</div>
+		</div>
+	</div>
 
 </form>
