The work on the Calculate page markup is ongoing

--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -143,10 +143,49 @@
 				</div>
 			</div>
 		</div>
-		<div class="row ms-1 mt-2">
+		<div class="row ms-1 mt-1">
 			<div class="col-5 col-md-4 col-lg-3 col-xxl-2">
-				<input class="form-control border-primary border-opacity-75" type="text" id="" name="" />
+				<input class="form-control border-primary border-opacity-75" type="text" id="technologicalReserveCoefficientInput" name="technologicalReserveCoefficient" />
 			</div>
+		</div>
+	</div>
+
+	<div class="mb-3">
+		<div class="row">
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="addCableSelectionRecommendationsCheckBox" name="addCableSelectionRecommendations">
+					<label class="form-check-label" for="addCableSelectionRecommendationsCheckBox">
+						@Localizer["Add cable selection recommendations"]
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="row ms-1 mt-1">
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="isCableRouteRunOutdoorsCheckBox" name="isCableRouteRunOutdoors">
+					<label class="form-check-label" for="isCableRouteRunOutdoorsCheckBox">
+						@Localizer["Will the sections of the cable route run outdoors"]
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="row ms-1 mt-1">
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
+					<label class="form-check-label" for="">
+						@Localizer[""]
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="row ms-1 mt-1">
+
+		</div>
+		<div class="row ms-1 mt-1">
+
 		</div>
 	</div>
 
