The work on the Calculate page markup is ongoing

--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -174,9 +174,9 @@
 		<div class="row ms-1 mt-1">
 			<div class="col">
 				<div class="form-check">
-					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
-					<label class="form-check-label" for="">
-						@Localizer[""]
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="considerFireSafetyRequirementsCheckBox" name="сonsiderFireSafetyRequirements">
+					<label class="form-check-label" for="considerFireSafetyRequirementsCheckBox">
+						@Localizer["Consider standard fire safety requirements"]
 					</label>
 				</div>
 			</div>
@@ -185,7 +185,14 @@
 
 		</div>
 		<div class="row ms-1 mt-1">
-
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="cableShieldingNecessityCheckBox" name="cableShieldingNecessity">
+					<label class="form-check-label" for="cableShieldingNecessityCheckBox">
+						@Localizer["Take into account the necessity of cable shielding"]
+					</label>
+				</div>
+			</div>
 		</div>
 	</div>
 
