--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -75,8 +75,8 @@
 			</div>
 		</nav>
 
-		<div class="container mt-3">
-			<main role="main" class="pb-3">
+		<div class="container mt-3 ps-lg-5 pe-lg-5">
+			<main role="main" class="pb-3 ps-lg-5 ps-lg-5 ps-xxl-3 pe-xxl-3 ms-xl-3 me-xl-3 ms-xxl-0 me-xxl-0">
 				@RenderBody()
 			</main>
 		</div>
