The work on the Calculate page markup is ongoing

--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -95,7 +95,7 @@
 					<option>1000</option>
 				</datalist>
 			</div>
-			<div class="col-auto d-flex align-items-end ps-0 pe-0">
+			<div class="col-auto d-flex align-items-end ps-0">
 				<label class="form-label mb-1" for="cableHankMeterageInput">
 					@Localizer["m"]
 				</label>
@@ -182,7 +182,55 @@
 			</div>
 		</div>
 		<div class="row ms-1 mt-1">
-
+			<div class="col">
+				<details>
+					<summary>
+						@Localizer["Used connection interfaces"]
+					</summary>
+					<div class="form-check">
+						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
+						<label class="form-check-label" for="">
+							@Localizer["Take into account the necessity of cable shielding"]
+						</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
+						<label class="form-check-label" for="">
+							@Localizer["Take into account the necessity of cable shielding"]
+						</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
+						<label class="form-check-label" for="">
+							@Localizer["Take into account the necessity of cable shielding"]
+						</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
+						<label class="form-check-label" for="">
+							@Localizer["Take into account the necessity of cable shielding"]
+						</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
+						<label class="form-check-label" for="">
+							@Localizer["Take into account the necessity of cable shielding"]
+						</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
+						<label class="form-check-label" for="">
+							@Localizer["Take into account the necessity of cable shielding"]
+						</label>
+					</div>
+					<div class="form-check">
+						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
+						<label class="form-check-label" for="">
+							@Localizer["Take into account the necessity of cable shielding"]
+						</label>
+					</div>
+				</details>
+			</div>
 		</div>
 		<div class="row ms-1 mt-1">
 			<div class="col">
