--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -3,6 +3,7 @@
 }
 
 <form asp-controller="@nameof(Calculation)" asp-action="@nameof(Calculation.Calculate)" method="post">
+
 	<div class="mb-3">
 		<div class="row">
 			<div class="col">
@@ -183,57 +184,6 @@
 		</div>
 		<div class="row ms-1 mt-1">
 			<div class="col">
-				<details>
-					<summary>
-						@Localizer["Used connection interfaces"]
-					</summary>
-					<div class="form-check">
-						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
-						<label class="form-check-label" for="">
-							@Localizer["Take into account the necessity of cable shielding"]
-						</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
-						<label class="form-check-label" for="">
-							@Localizer["Take into account the necessity of cable shielding"]
-						</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
-						<label class="form-check-label" for="">
-							@Localizer["Take into account the necessity of cable shielding"]
-						</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
-						<label class="form-check-label" for="">
-							@Localizer["Take into account the necessity of cable shielding"]
-						</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
-						<label class="form-check-label" for="">
-							@Localizer["Take into account the necessity of cable shielding"]
-						</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
-						<label class="form-check-label" for="">
-							@Localizer["Take into account the necessity of cable shielding"]
-						</label>
-					</div>
-					<div class="form-check">
-						<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="" name="">
-						<label class="form-check-label" for="">
-							@Localizer["Take into account the necessity of cable shielding"]
-						</label>
-					</div>
-				</details>
-			</div>
-		</div>
-		<div class="row ms-1 mt-1">
-			<div class="col">
 				<div class="form-check">
 					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="cableShieldingNecessityCheckBox" name="cableShieldingNecessity">
 					<label class="form-check-label" for="cableShieldingNecessityCheckBox">
@@ -242,6 +192,94 @@
 				</div>
 			</div>
 		</div>
+		<div class="row ms-1 mt-1">
+			<div class="col">
+				<label class="form-check-label">
+					@Localizer["Used connection interfaces"]
+				</label>
+			</div>
+		</div>
+		<div class="row ms-3 mt-1">
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="10basetCheckBox" name="10baset">
+					<label class="form-check-label" for="10basetCheckBox">
+						10BASE-T
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="row ms-3 mt-1">
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="100basetCheckBox" name="100baset">
+					<label class="form-check-label" for="100basetCheckBox">
+						Fast Ethernet (100BASE-T)
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="row ms-3 mt-1">
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="1000basetCheckBox" name="1000baset">
+					<label class="form-check-label" for="1000basetCheckBox">
+						Gigabit Ethernet (1000BASE-T)
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="row ms-3 mt-1">
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="1000basetxCheckBox" name="1000basetx">
+					<label class="form-check-label" for="1000basetxCheckBox">
+						Gigabit Ethernet (1000BASE-TX)
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="row ms-3 mt-1">
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="25gbasetCheckBox" name="25gbaset">
+					<label class="form-check-label" for="25gbasetCheckBox">
+						2.5GBASE-T
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="row ms-3 mt-1">
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="5gbasetCheckBox" name="25gbaset">
+					<label class="form-check-label" for="5gbasetCheckBox">
+						5GBASE-T
+					</label>
+				</div>
+			</div>
+		</div>
+		<div class="row ms-3 mt-1">
+			<div class="col">
+				<div class="form-check">
+					<input class="form-check-input border-primary border-opacity-75" type="checkbox" id="10gbasetCheckBox" name="10gbaset">
+					<label class="form-check-label" for="10gbasetCheckBox">
+						10GE (10GBASE-T)
+					</label>
+				</div>
+			</div>
+		</div>
 	</div>
 
+	<div class="mb-3">
+		<div class="col-5 col-md-4 col-lg-3 col-xxl-2">
+			<button class="btn btn-sm btn-outline-secondary">
+				@Localizer["Restore defaults"]
+			</button>
+		</div>
+	</div>
+
+	<hr class="border border-primary opacity-50" />
+
 </form>
+
