--- a/Structured Cabling Studio/Views/Shared/_Layout.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_Layout.cshtml
@@ -32,16 +32,16 @@
 				<div id="siteNavbarDiv" class="navbar-collapse collapse d-lg-inline-flex me-0 me-sm-1 me-md-2 me-lg-3 pt-2 pt-sm-0">
 					<ul class="align-items-center navbar-nav flex-grow-1 flex-row-reverse">
 						<li class="siteNavbarLi nav-item ms-3 ms-lg-2 me-1">
-							<div class="nav-link text-white">
+							<div class="navLinkText nav-link text-white">
 								@await Html.PartialAsync("_SelectLanguagePartial")
 							</div>
 						</li>
 						<li class="siteNavbarLi nav-item ms-3 ms-lg-2 me-1">
-							<a class="nav-link text-white text-center fw-semibold" href="#">
+							<a class="navLinkText nav-link text-white text-center fw-semibold" href="#">
 								@Localizer["Project information"]
 							</a>
 						</li>
-						<li class="nav-item ms-3 ms-lg-2 me-1">
+						<li class="navLinkText nav-item ms-3 ms-lg-2 me-1">
 							@await Html.PartialAsync("_SignInWithGooglePartial")
 						</li>
 					</ul>
@@ -83,7 +83,7 @@
 
 	</div>
 
-	<footer class="position-absolute border-top footer text-nowrap text-muted w-100">
+	<footer id="siteFooterText" class="position-absolute border-top footer text-nowrap text-muted w-100">
 		<div class="container">
 			Pavel Batsemakin (<a href="https://github.com/Rhoxolan">Rhoxolan</a>) &#8211; 2023
 		</div>
@@ -94,6 +94,7 @@
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	<script src="~/js/customSelectors.js" asp-append-version="true"></script>
 	<script src="~/js/_SignInWithGooglePartial.js" asp-append-version="true"></script>
+	<script src="~/js/_Layout.js" asp-append-version="true"></script>
 	@await RenderSectionAsync("Scripts", required: false)
 
 </body>
