--- a/Structured Cabling Studio/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/Structured Cabling Studio/Views/Shared/_SelectLanguagePartial.cshtml
@@ -13,7 +13,7 @@
 <form class="d-flex flex-column align-items-center" asp-controller="@nameof(Localization)" asp-action="@nameof(Localization.SetLanguage)" method="post"
 	  asp-route-returnUrl="@Context.Request.Path">
 	<label class="form-label mb-0" for="languageSelect">@Localizer["Language"]</label>
-	<select class="navLinkText form-select-sm" id="languageSelect" name="culture" onchange="this.form.submit();">
+	<select class="form-select-sm" id="languageSelect" name="culture" onchange="this.form.submit();">
 		@foreach (var item in cultureItems)
 		{
 			<option value="@item.Value" selected="@((item.Value == requestCulture?.RequestCulture.UICulture.Name) ? "selected" : null)">
