--- a/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
+++ b/Structured Cabling Studio/Views/Calculation/Calculate.cshtml
@@ -272,14 +272,50 @@
 	</div>
 
 	<div class="mb-3">
-		<div class="col-5 col-md-4 col-lg-3 col-xxl-2">
-			<button class="btn btn-sm btn-outline-secondary">
-				@Localizer["Restore defaults"]
-			</button>
+		<div class="row">
+			<div class="col-auto">
+				<button class="btn btn-sm btn-outline-secondary">
+					@Localizer["Restore defaults"]
+				</button>
+			</div>
 		</div>
 	</div>
 
 	<hr class="border border-primary opacity-50" />
+
+	<div class="mb-3">
+		<div class="row">
+			<div class="col-auto">
+				<button class="btn btn-lg btn-outline-primary fw-semibold">
+					@Localizer["Calculate"]
+				</button>
+			</div>
+		</div>
+	</div>
+
+	<div class="mb-3">
+		<div class="row">
+			<div class="col">
+				<textarea id="configurationOutputTextArea" class="form-control border-primary" readonly rows="18">
+			</textarea>
+			</div>
+		</div>
+	</div>
+
+	<div class="mb-3">
+		<div class="row">
+			<div class="col-auto">
+				<button class="btn btn-outline-secondary my-1 my-sm-0">
+					@Localizer["Save to TXT"]
+				</button>
+			</div>
+			<div class="col-auto">
+				<button class="btn btn-outline-secondary my-1 my-sm-0">
+					@Localizer["Clean output block"]
+				</button>
+			</div>
+		</div>
+	</div>
 
 </form>
 
